[gd_scene load_steps=11 format=3 uid="uid://5wbw10m1j5dg"]

[ext_resource type="Script" uid="uid://dsayfffxy2c5" path="res://level_base.gd" id="1_ai37i"]
[ext_resource type="Texture2D" uid="uid://cp086j4cs8des" path="res://Assets/black_background.png" id="2_2xw7t"]
[ext_resource type="PackedScene" uid="uid://c8jcn4tn33710" path="res://hud.tscn" id="3_3k65v"]
[ext_resource type="Texture2D" uid="uid://tobu1wbrbx6b" path="res://Assets/game_over.png" id="3_rmmnk"]
[ext_resource type="Texture2D" uid="uid://cra6o3m5n2s5v" path="res://icon.svg" id="3_wfo2d"]
[ext_resource type="Texture2D" uid="uid://c2dvrgqpko8cm" path="res://Assets/death_screen.png" id="4_47nfd"]

[sub_resource type="Animation" id="Animation_mogay"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/GameEndScreen:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(2160, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/DeathScreen:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(960, 2160)]
}

[sub_resource type="Animation" id="Animation_3aw7y"]
resource_name = "game_end"
length = 6.0
step = 1.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/GameEndScreen:position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(2160, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 3)
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_exit_game"
}]
}

[sub_resource type="Animation" id="Animation_t02ed"]
resource_name = "game_lose"
length = 6.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/DeathScreen:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(960, 2160), Vector2(960, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_exit_game"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dtqih"]
_data = {
&"RESET": SubResource("Animation_mogay"),
&"game_end": SubResource("Animation_3aw7y"),
&"game_lose": SubResource("Animation_t02ed")
}

[node name="LevelBase" type="Node2D"]
script = ExtResource("1_ai37i")

[node name="CameraTarget" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="CameraTarget"]
zoom = Vector2(0.5, 0.5)
process_callback = 0
position_smoothing_enabled = true

[node name="BlackBackground" type="Sprite2D" parent="CameraTarget/Camera2D"]
z_index = -10
scale = Vector2(3, 3)
texture = ExtResource("2_2xw7t")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource("3_3k65v")]

[node name="DeathScreen" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(960, 2160)
texture = ExtResource("4_47nfd")

[node name="GameEndScreen" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(960, 2160)
texture = ExtResource("3_rmmnk")

[node name="CurseDamageTimer" type="Timer" parent="."]
autostart = true

[node name="PlayerPos" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="PlayerPos"]
visible = false
z_index = 10
texture = ExtResource("3_wfo2d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dtqih")
}

[node name="EasterEgg" type="RichTextLabel" parent="."]
visible = false
z_index = 100
offset_left = 100.0
offset_top = 600.0
offset_right = 275.0
offset_bottom = 623.0
scale = Vector2(9, 9)
text = "Funny easter egg hehe"

[connection signal="timeout" from="CurseDamageTimer" to="." method="_on_curse_damage_timer_timeout"]
